Add Unclaimed Rewards, Weighted Scoring and Monthly Winner Calculation